TIP #547 now in Voting

--- a/tip/547.md
+++ b/tip/547.md
@@ -3,7 +3,7 @@
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        31-May-2019
 	Post-History:   
 	Discussions-To: Tcl Core list
