Document reason of deferral of #150

--- a/tip/150.md
+++ b/tip/150.md
@@ -74,6 +74,15 @@ to implement the -displayof feature via Distributed COM. However, I
 don't see much call for this - network sockets are a lot simpler to
 use than DCOM.
 
+# Security considerations
+
+The implementation of this TIP was backed out due to security considerations.
+Older versions of Windows allowed access to the exposed COM service without
+authentication.
+
+In newer versions of Windows the default is sane and this security concern is
+not valid anymore.
+
 # Copyright
 
 This document is placed in the public domain.
