Don't put a full-stop at the end of titles; they're not sentences.

--- a/tip/33.md
+++ b/tip/33.md
@@ -1,4 +1,4 @@
-# TIP 33: Add 'lset' Command to Assign to List Elements.
+# TIP 33: Add 'lset' Command to Assign to List Elements
 	Author:         Kevin Kenny <kennykb@acm.org>
 	State:          Final
 	Type:           Project
