--- a/tip/527.md
+++ b/tip/527.md
@@ -1,4 +1,4 @@
-# TIP 527: New measurement facilities in TCL: New command timerate.
+# TIP 527: New measurement facilities in TCL: New command timerate
 	Author:         Sergey G. Brester <sebres@users.sourceforge.net>
 	State:          Final
 	Type:           Project
