--- a/tip/533.md
+++ b/tip/533.md
@@ -1,4 +1,4 @@
-# TIP 533: Extension of the menu post command.
+# TIP 533: Extension of the menu post command
 	Author:         Marc Culler
 	State:          Final
 	Type:           Project
