--- a/tip/542.md
+++ b/tip/542.md
@@ -1,4 +1,4 @@
-# TIP 542:Support for switchable (Androwish-compatible) Full Unicode support. 
+# TIP 542:Support for switchable (Androwish-compatible) Full Unicode support
 	Author:         Jan Nijtmans <jan.nijtmans@users.sf.net>
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
