--- a/tip/547.md
+++ b/tip/547.md
@@ -1,4 +1,4 @@
-# TIP 547: New encodings: UTF-16, UCS-2.
+# TIP 547: New encodings: UTF-16, UCS-2
 	Author:         Jan Nijtmans <jan.nijtmans@users.sf.net>
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
