Added ready to run test binaries location

--- a/tip/510.md
+++ b/tip/510.md
@@ -125,6 +125,11 @@ Test files are available in the .../tests/tko/ directory.
 - [`tkoGraph_vector.test`](https://core.tcl-lang.org/tk/doc/tip-510/tests/tko/tkoGraph_vector.test) **graph::vector** command tests
 - [`tkoPath.test`](https://core.tcl-lang.org/tk/doc/tip-510/tests/tko/tkoPath.test) **path** widget tests
 
+## Test binaries
+
+- Linux: <https://sourceforge.net/projects/kbskit/files/tip510/kbs_tip510>
+- Windows: <https://sourceforge.net/projects/kbskit/files/tip510/kbs_tip510.exe>
+
 # Discussion
 
 See also discussion at the [wiki](http://wiki.tcl.tk/55360).
