--- a/tip/545.md
+++ b/tip/545.md
@@ -31,6 +31,37 @@ The final unit will be pixels anyway, undependent on any intermediate unit.
 Image width and height is in pixel.
 There is no other unit available for image width or height.
 
+The current implementation does the following:
+
+   *   the intermediate representation is scaled in the unit given by "-unit" using the current dpi value. The result depends on the unit used in the svg, to specified unit and the dpi value (96 or specified by -dpi).
+   *   the size of the image is evaluated by transforming the given unit into pixel
+   *   the image data is rendered by assuming (not transforming: 1 inch is set to 1 pixel) that unit is pixel. If it was not pixel, a scale effect is shown by accident.
+
+Here is an example from the core list:
+
+    set data {<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100"><circle fill="yellow" stroke="red" cx="50" cy="50" r="30" /></svg>}
+    set im [image create photo -data $data]
+    pack [button .b -image $im]
+    $im configure -format {svg -unit px}  ; # no change (this is the default)
+    $im configure -format {svg -unit mm}  ; # image gets scaled to a smaller image, but image size stays the same
+
+    # Set inner scale to one:
+    $im configure -format {svg -unit in -dpi 1}
+    image width $im
+    -> 100
+    # with the same result as no format option at all (e.g. "svg -unit px -dpi 96")
+    
+    # Set inner scale to 0.1, but keep same size
+    $im configure -format {svg -unit in -dpi 10}
+    image width $im
+    -> 100
+    # but image data is scale by factor 0.1
+    
+    # The standard way to get an image scaled by 0.1 but with size set to 100x100 is as follows:
+    set im2 [image create photo -data $data -format {svg -scale 0.1} -width 100 -height 100]
+    pack [button .b2 -image $im2]
+</verbatim>
+
 ## Add a possibility to scale to a given width or height in pixels
 
 A common usage of svg is to render button images for a given button height or width.
