547 was accepted, and implemented

--- a/tip/547.md
+++ b/tip/547.md
@@ -1,9 +1,9 @@
 # TIP 547: New encodings: UTF-16, UCS-2
 	Author:         Jan Nijtmans <jan.nijtmans@users.sf.net>
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        31-May-2019
 	Post-History:   
 	Discussions-To: Tcl Core list
