TIP 545 svg options: some refinements and EuroTCL discussion report

--- a/tip/545.md
+++ b/tip/545.md
@@ -16,11 +16,11 @@ This TIP is about the options of SVG rendering:
 
    *   The option "-unit" is not helpful in an environment, where the only destination unit is pixel.
    *   The option "-scale float" is the essential tool to set rendering scaling. Nevertheless, to scale to a given height or width, a two-step procedure is required. This common case should be implemented by a one step procedure.
-   *   A valid image file scaled to a size below 0.5px or 0.5px does not lead to an error but to an image of 1x1 pixels. The aspect-ratio is not respected.
+   *   A valid image file scaled to a size resulting to 0 px height or width does not lead to an error but to an image of at least 1x1 pixels. The aspect-ratio may not be respected.
 
 # Rationale
 
-This TIP included two components:
+This TIP includes the following proposed changes:
 
 ## Remove option "-unit"
 
@@ -78,8 +78,8 @@ The aim is to render it only once by one parameter.
 
 ## No error on to small scale
 
-It feels odd to throw an error on a valid image but on a to small -scale parameter resulting in a rounded size of width 0 or height 0.
-Alternatively, a valid image with size 1x1 is rendered.
+It feels odd to throw an error on a valid image but on a to small combination of size and -scale parameter resulting in a rounded size of width 0 or height 0.
+Alternatively, a valid image with width 1 and/or height 1 is rendered.
 
 As an alternate solution, an error message special for this case may be given.
 
@@ -125,12 +125,27 @@ The option may not be specified together with "-scale" and/or "-scaletoheight".
 
 ## No error on to small scale
 
-The image size is set to 1x1 if wether width or height is 0 after scaling and rounding.
+The image size is set to height 1 and/or width 1 if width and/or height is 0 after scaling and rounding.
 This is a very rare case, as ceil rounding is used and we must go below the resolution of double to acheve this.
 
 # Implementation
 
 Implementation is ready in branch tip-545-svg-options.
+
+# Discussion
+
+This TIP was discussed at Euro-TCL 2019.
+
+It was concluded that svg support is a good feature and helpful for modern gui design.
+The limitations of nanosvg are seen as ok.
+
+It was concluded that there is no use case for the -unit option.
+
+Rene has another use-case for visual graph generation.
+A svg file is created on the fly using the given data.
+This is then rendered and displayed by a label widget.
+This procedure is faster than the canvas or the tkpath widget (and has much less features).
+This solution is a good fit to this application.
 
 # Copyright
 
