--- a/tip/545.md
+++ b/tip/545.md
@@ -2,7 +2,7 @@
 	Author:         Harald Oehlmann <oehhar@users.sourceforge.net>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        19-May-2019
 	Keywords:       Tk, image
 	Tcl-Version:    8.7
