TIP545 (tk svg -scaletoheight) final, added remark by Francois

--- a/tip/545.md
+++ b/tip/545.md
@@ -1,12 +1,16 @@
 # TIP 545: image photo SVG options: remove -unit and add target height/width option
 	Author:         Harald Oehlmann <oehhar@users.sourceforge.net>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        19-May-2019
 	Keywords:       Tk, image
 	Tcl-Version:    8.7
-	Tk-Branch:     tip-545-svg-options
+	Tk-Branch:      tip-545-svg-options
+	Vote-Results:	6/0/0 accepted
+	Votes-For:	BG, DKF, FV, KW, JN, MC
+	Votes-Against:	none
+	Votes-Present:	none
 -----
 
 # Abstract
@@ -146,6 +150,12 @@ A svg file is created on the fly using the given data.
 This is then rendered and displayed by a label widget.
 This procedure is faster than the canvas or the tkpath widget (and has much less features).
 This solution is a good fit to this application.
+
+Francois Vogel commented with his vote:
+
+The TIP says "The image size is set to height 1 and/or width 1 if width and/or height is 0 after scaling and rounding.". Where is that statement implemented?
+
+IMO this story is a leftover in the TIP from a previous mistake made in the implementation that I corrected later (details at https://sourceforge.net/p/tcl/mailman/message/36693070/ ). If so, I would prefer the TIP to be corrected so that it accurately reflects the implementation: all this story should be deleted throughout the TIP.
 
 # Copyright
 
