TIP #532 is now final since implementations were merged into core-8-6-branch and trunk of Tk.

--- a/tip/532.md
+++ b/tip/532.md
@@ -1,6 +1,6 @@
 # TIP 532: Re-implementation of event loop processing
 	Author:         Gregor Cramer <gcramer@sourceforge.net>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        09-Jan-2019
