--- a/tip/414.md
+++ b/tip/414.md
@@ -3,7 +3,7 @@
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        15-Oct-2012
 	Post-History:   
 	Tcl-Version:    8.7
