Record votes for TIP #414 and #548

--- a/tip/414.md
+++ b/tip/414.md
@@ -1,14 +1,18 @@
 # TIP 414: Add (back) Tcl_InitSubsystems as Public API
 	Author:         Brian Griffin <brian_griffin@mentor.com>
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        15-Oct-2012
 	Post-History:   
 	Tcl-Version:    8.7
 	Tcl-Branch:     initsubsystems
 	Keywords:       Tcl, library initialisation
+	Vote-Results:   5/1/0 accepted
+	Votes-For:      JN, DKF, KW, KBK, DGP
+	Votes-Against:  none
+	Votes-Present:  SL
 -----
 
 # Abstract
