--- a/tip/548.md
+++ b/tip/548.md
@@ -1,15 +1,19 @@
 # TIP 548:Support `wchar_t` conversion functions and deprecate `Tcl_WinUtfToTChar()` and `Tcl_WinTCharToUtf()`
 	Author:         Jan Nijtmans <jan.nijtmans@users.sf.net>
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        3-June-2019
 	Post-History:   
 	Discussions-To: Tcl Core list
 	Keywords:       Tcl
 	Tcl-Version:    8.7
 	Tcl-Branch:     tip-548
+	Vote-Results:   4/2/0 accepted
+	Votes-For:      JN, DKF, KW, KBK
+	Votes-Against:  none
+	Votes-Present:  DGP, SL
 -----
 
 # Abstract
