format cleanup in TIP 551

--- a/tip/551.md
+++ b/tip/551.md
@@ -1,5 +1,5 @@
-# TIP 551: permit underscore in numerical literals in source code
-    Author:        tips@rocketship1.me
+# TIP 551: Permit underscore in numerical literals in source code
+    Author:        Eric <tips@rocketship1.me>
     State:         Draft
     Type:          Project
     Vote:          Pending
@@ -37,11 +37,11 @@ number.
 
 For example,
 
-    `expr 100_000_000`
-    `expr 0xffff_ffff`
-    `expr 0b1111_1111_1111_1110`
+    expr 100_000_000
+    expr 0xffff_ffff
+    expr 0b1111_1111_1111_1110
 
-A number is identified in the routine TclParseNumber and scans the
+A number is identified in the routine `TclParseNumber` and scans the
 text until the end of the number. It accepts several formats. The key
 is that a number is a word that begins with a decimal digit and can
 have several forms for decimal, octal, hexidecimal, and binary. The
@@ -53,14 +53,14 @@ underscores in a row.
 
 Thus,
 
-    `0x_ffff_ffff_`
+    0x_ffff_ffff_
 
 would be legal and similarly with the other 3 bases supported.
 
 The one restriction would be a number with a leading `_` as that would
 change the meaning from a number to a bareword, e.g.
 
-    `expr _123`
+    expr _123
 
 would not be allowed, since that would not be a number.
 
