Correct authors name 551

--- a/tip/551.md
+++ b/tip/551.md
@@ -1,5 +1,5 @@
 # TIP 551: Permit underscore in numerical literals in source code
-    Author:        Eric <tips@rocketship1.me>
+    Author:        Eric Taylor <tips@rocketship1.me>
     State:         Draft
     Type:          Project
     Vote:          Pending
