--- a/tip/552.md
+++ b/tip/552.md
@@ -16,7 +16,10 @@ This TIP proposes a set of new features for the Ttk treeview widget.
 
 # Rationale
 
-TBW
+Each time I have tried to use the Treeview widget it fell short of some
+feature or another and I had to resort to other means.
+
+This aims to fill in the most common missing pieces.
 
 # Specification
 
@@ -27,6 +30,8 @@ The following features are added to the treeview widget.
 Adds the ability to lock the first column(s) from horizontal scrolling.
 
 A new option **-titlecolumns** *n* is added, requesting columns to be locked.
+The tree column counts, even if **-show tree** is not specified. Thus for
+value N of this option, column #N is the first one that is scrollable.
 
 ## Cell selection
 
@@ -37,8 +42,8 @@ Cell selection is independent of item selection.
 Cells are identified with a two element list with item id and column id.
 
 A new subcommand **cellselection** is added, mirroring the present **selection**.
-In addition the **cellselection set** command gets a version for selecting a
-rectangular range.
+In addition the **cellselection set** and **cellselection add** commands get
+a version for selecting a rectangular range.
 
 A new option **-selecttype** *type* is added to direct default bindings to
 use either item selection or cell selection.
@@ -59,6 +64,12 @@ at that color.
 The **-show** option is extended with the value `columnseparators` to
 display a separator between columns.
 Built in themes are updated to define the separators.
+
+## Image anchor for tree
+
+A new item option **-imageanchor** *anchor* is added.
+This controls the placement of the image relative to the text in an
+item's tree column. Default is "w".
 
 # Implementation
 
