Further ellaboration on tip554

--- a/tip/554.md
+++ b/tip/554.md
@@ -18,4 +18,40 @@ as C data structures presented as a virtual file system.
 # Rationale
 
 In Tip430 we explored the various issues with integrating a Zip based file system into
-interpreter initialization. While this process is finished and largely working, i
+interpreter initialization. While this process is finished and largely working, there
+are some awkward workarounds to manage the process of Zipfs encoding on exotic platforms.
+Some of these workaround involve forgoing the tip entirely.
+
+While the use of Zipfs as the VFS of record seems to be somewhat controversial, performance
+gains from not having to access (and explor) the local file system for every interpreter
+startup are measurable.
+
+There is also the problem of having to expose the /library system (as built) to kit builders
+who have to copy it into a designated location in order for the Tcl core and Tk to start
+properly.
+
+What would be ideal is if the /library file systems were part and parcel with the core
+libraries themselves.
+
+# Implementation
+
+A script will read the Library file system, end encode it into a bespoke virtual file
+system implementation implemented in a single C file. That C file (tentatively named
+tclLibraryCvfs.c) will be placed in the generic/ file system, and compiled and linked
+along with the rest of the core.
+
+The current process of discovering the location of init.tcl will be replaced with the
+process of mounting this VFS.
+
+# Maintenance
+
+This C file will be maintained in a similar manner to the Stubs table. However, because
+the data contained is largely a copy, this file will not be tracked in Fossil. Distribution
+tarballs will contain a copy, but developers who work from fossil checkouts will have to
+periodically re-run the script. A makefile directive will be included to generate the file
+if it is missing, and "make genstubs" will replace it.
+
+
+# Copyright
+
+This document has been placed in the public domain.
