Further elaboraton on tip 554

--- a/tip/554.md
+++ b/tip/554.md
@@ -40,8 +40,12 @@ system implementation implemented in a single C file. That C file (tentatively n
 tclLibraryCvfs.c) will be placed in the generic/ file system, and compiled and linked
 along with the rest of the core.
 
-The current process of discovering the location of init.tcl will be replaced with the
-process of mounting this VFS.
+The current process of discovering the location of init.tcl (for tcl) or tk.tcl (for Tk)
+will be replaced with the process of mounting this VFS, thus exposing it's contents to
+the interpreter.
+
+Work for this project exists as the tip-544 branches of both Tcl and Tk. The tip-544 branch
+for Tcl is an offshoot of core-8-6-branch. The Branch for Tk is an offshoot of core-8-branch.
 
 # Maintenance
 
@@ -51,6 +55,58 @@ tarballs will contain a copy, but developers who work from fossil checkouts will
 periodically re-run the script. A makefile directive will be included to generate the file
 if it is missing, and "make genstubs" will replace it.
 
+# Specification
+
+This system provides no external function calls on the script level, nor does it require
+adding new functions or modifying existing functions to either the public or private
+API of Tcl or Tk.
+
+## VFS Mount Point
+
+The VFS implementation will advertise itself as //library:/core/tcl for the Tcl library system
+and //library:/core/tk for the Tk library system. Packages which need to utilize a similar
+technology are encouraged to adopt //library:/pkg/PACKAGE_NAME. It is intended that these
+file systems be small enough that keeping them memory resident will not impact the performance
+of a general purpose computer.
+
+# Installation changes
+
+The Tcl and Tk installers will no longer need to provide a copy of the /library file system
+during installation. This process will be removed.
+
+# Memory Usage
+
+On platforms that Tcl typically runs on, blocks of constants are kept in virtual memory,
+and are not loaded into working RAM. However, some primitive working environments may
+try to load these C constants into working RAM. The library file system of Tcl is current
+4.3 mb (as determined by running tar cf, and measuring the file.) The library file system
+of Tk is 1.7 mb. On a computer capable of running Tk, even loaded into working memory will
+not even be a consideration. For an embedded system where every byte counts, we can leave
+out encodings, and that reduces the size to 2.7mb.
+
+# Backward Compatibility
+
+The main area for concern for Compatibility issues is Tk. Tk can be compiled against Tcl
+cores of various vintages, including those which are not equipped with the features of
+this tip. Because the VFS for Tk is self contained, and distributed by virtue of being
+compiled into the library itself, for most users there will be no change. (Save, of course,
+for the improved load time.)
+
+Kit builders and speciality developers who provide their own library systems are still free
+to populate their own values for tcl_library and tk_library and those contracts will still
+be honored. The C-based VFS will only load if no other candidate to fill the role of the
+/library file system has stepped forward by the time the interpreter initializes.
+
+# Interactions with tip430
+
+This tip only replaces the portions of tip430 dealing with interpreter initialization.
+In all other respects the goals of this tip and non-startup goals of tip430 are parallel
+to one another.
+
+# Inspiration
+
+This technology is influenced by Roy Keene's work with XVFS. It also draws on the lessons
+learned from implementing tip430.
 
 # Copyright
 
