Updates for TIP #468

--- a/tip/468.md
+++ b/tip/468.md
@@ -4,10 +4,10 @@
 	Type:		Project
 	Vote:		Pending
 	Created:	03-Apr-2017
-	Post-History:  
+	Post-History:
 	Keywords:	Tcl, socket, SOMAXCONN
 	Tcl-Version:	8.7
-	Tcl-Branch:		tip-468-bis
+	Tcl-Branch:		tip-468
 -----
 
 # Abstract
@@ -47,13 +47,13 @@ As for the Tcl side, the **socket** command gains a new optional switch that
 are only valid for server sockets: ?**-backlog** _int_?. Omitting the
 parameter will cause the default value to be used.
 
-Tcl code includes local macro’s for SOMAXCONN which override all platforms
+Tcl code includes local macro's for SOMAXCONN which override all platforms
 values for SOMAXCONN. This makes backwards compatibility easier. We only need
 to preserve the macro value in the default code path.
 
 # Reference Implementation
 
-Please refer to the _tip-???_ branch of the core Tcl repository.
+Please refer to the _tip-468_ branch of the core Tcl repository.
 
 # Backwards Compatibility
 
