--- a/tip/538.md
+++ b/tip/538.md
@@ -28,7 +28,7 @@ with the unmodified, externally built, libtommath. This has the following conseq
 
   * On 64-bit platforms (win64, linux-64), libtommath will now be built in 64-bit mode, while Tcl's libtommath
     used to be built in 32-bit mode.  Extensions which depend on the internal structure of the libtommath
-    types (the dp field in the `mp_int` structure or the value of MP_DIGIT_BIT) will need to be re-compiled.
+    types (the dp field in the `mp_int` structure or the value of `MP_DIGIT_BIT`) will need to be re-compiled.
 
   * Since libtommath depends on the `<stdint.h>` header-file, a replacement header-file is added in the compat
     directory. This header file will be used to build libtommath on compilers which are not yet up to the c99
