--- a/tip/555.md
+++ b/tip/555.md
@@ -15,10 +15,7 @@ This tip proposes listing of available layouts in ttk::theme
 
 # Rationale
   
-inside a theme I can ask for defined layouts but cannot ask for defined layouts
-  
-  
-inside a theme I can ask for defined elements
+inside a theme I can ask for known layouts but cannot ask for all other predefined layouts like I can ask for all predefined elements:  
   
   
 `ttk::style element names`  
